# drifter

./: .env.example  .gitignore  AGENTS.md  AGENTS_ARCHITECTURE.md  AGENTS_EVALUATION.md  AGENTS_WORKFLOW.md  CLAUDE.md  MASTER_PROMPT.md  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
apps/: README.md
apps/api/: __init__.py
apps/cli/: __init__.py  errors.py  main.py  output.py
apps/debugger_ui/: __init__.py
apps/worker/: __init__.py
docs/: 00_SYSTEM_DESIGN.md  ARCHITECTURE_GUIDE.md  CLAUDE_WORKFLOW.md  EVALUATION_STRATEGY.md  IMPLEMENTATION_PRINCIPLES.md  REPO_STRUCTURE.md  adding_llm_providers.md  app_layer.md  chunking.md  cli_commands.md  context_builder.md  contracts.md  debugger_ui_plan.md  developer_workflow.md  evaluation.md  experiments.md  generation.md  indexing.md  ingestion.md  integrations.md  observability.md  parsing.md  reranking.md  retrieval_broker.md  retrieval_stores.md
examples/: chunking_sample.py  context_builder_sample.py  embedding_sample.py  evaluation_sample.py  experiment_sample.py  generation_sample.py  ingestion_sample.py  integration_wiring_sample.py  observability_sample.py  parsing_sample.py  reranking_sample.py  retrieval_broker_sample.py  retrieval_stores_sample.py
experiments/: __init__.py
libs/: README.md  resilience.py
libs/adapters/: README.md  __init__.py  config.py  config_loader.py  env.py  factory.py  protocols.py  store_writers.py
orchestrators/: README.md  __init__.py  async_query.py  bootstrap.py  ingestion.py  query.py
scripts/: check_services.sh
tests/: README.md
(+221 files in other folders)
